--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2226,18 +2226,18 @@ player_vars:
     initial_value: 0
     value_type: int
 
-# SLIDES CONFIGURATION
+#SLIDES CONFIGURATION
 #--------------------------------------------
-# slides:
-#   welcome_slide:
-#     widgets:
-#       - type: text
-#         font_name: lazer84
-#         font_size: 70
-#         text: "Pincraft"
+slides:
+  welcome_slide:
+    widgets:
+      - type: text
+        font_name: lazer84
+        font_size: 70
+        text: "Pincraft\nLoading"
           
-# slide_player:
-#   init_done: welcome_slide
+slide_player:
+  init_done: welcome_slide
  
 # MODES CONFIGURATION
 #--------------------------------------------
