--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -109,6 +109,7 @@ event_player:
 
   multiball_nightmb_ended{current_player.world_id==1}:
     #theend_start
+    #world5_start
     world2_start   
   multiball_nightmb_ended{current_player.world_id==2}:
     world3_start   
@@ -593,6 +594,17 @@ widgets:
       z: 100
       anchor_x: left
       anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Earned EB Count - (player|earned_ebcount)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 18
+      y: top-175
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
 
   widget_scorebackground:
     - type: image        #SCORE BACKGROUND
@@ -750,11 +762,20 @@ widgets:
     - type: image        #WORLD BACKGROUND
       image: world1_background
       z: 5
+  widget_videobackground:
+    - type: video
+      video: world1_overview
+      auto_play: true
+      volume: 0
+      end_behavior: loop
+      z: 10
 
 
 
 widget_player:
-
+  show_debug:
+    widget_debug:
+      action: add
 
   #BALL COUNT WIDGETS
   show_ball_count{current_player.ball==1}:
