--- a/modes/world5/config/world5.yaml
+++ b/modes/world5/config/world5.yaml
@@ -96,6 +96,26 @@ widget_player:
       slide: world_slide
       widget_settings:
         image: world5_background
+    widget_item1icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: SoulSand_Small
+    widget_item2icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: NetherGold_Small
+    widget_item3icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: Netherrack_Small
+    widget_item4icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: WoodNether_Small
 
 event_player:
    world_collected:
