--- a/modes/attract/shows/attract_display_loop.yaml
+++ b/modes/attract/shows/attract_display_loop.yaml
@@ -16,6 +16,7 @@
             - property: opacity
               value: 1
               duration: .5s
+              repeat: true   
       - type: image
         image: pincraft_logo
       transition:
