--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -51,6 +51,11 @@ light_player:
     gi_loopupperleft: red
     gi_loopupperright: green
 
+  #Stronghold
+  divertercontrol_statechanged{current_player.diverter_state=="stronghold"}:
+    gi_loopupperleft: red
+    gi_loopupperright: green
+
   #Night MB
   divertercontrol_statechanged{current_player.diverter_state=="multiballnight"}:
     gi_loopupperleft: green
@@ -154,11 +159,13 @@ event_player:
   timer_leftdropreset_complete{current_player.diverter_state=="worldidle"}: diverter_resetupperdrop
   timer_leftdropreset_complete{current_player.diverter_state=="worldtools"}: diverter_resetupperdrop
   timer_leftdropreset_complete{current_player.diverter_state=="multiballvillager"}: diverter_resetupperdrop
+  timer_leftdropreset_complete{current_player.diverter_state=="stronghold"}: diverter_resetupperdrop
   
   #Left Loop Drop Up Events
   divertercontrol_statechanged{current_player.diverter_state=="worldidle"}: diverter_resetupperdrop
   divertercontrol_statechanged{current_player.diverter_state=="worldtools"}: diverter_resetupperdrop
   divertercontrol_statechanged{current_player.diverter_state=="multiballvillager"}: diverter_resetupperdrop
+  divertercontrol_statechanged{current_player.diverter_state=="stronghold"}: diverter_resetupperdrop
 
   #Left Loop Drop Down Events
   divertercontrol_statechanged{current_player.diverter_state=="worldtravel"}: diverter_dropupperdrop
@@ -170,7 +177,7 @@ event_player:
   loopright_hit{current_player.diverter_state=="worldidle"}: diverter_rightloophit, diverter_dropupperdrop
   loopright_hit{current_player.diverter_state=="multiballnight"}: diverter_rightloophit, diverter_dropupperdrop
   loopright_hit{current_player.diverter_state=="multiballvillager"}: diverter_rightloophit, diverter_dropupperdrop
- 
+   
   #Left Loop Hit Events:
   loopleft_hit{current_player.diverter_state=="multiballnight"}: diverter_leftloophit
   loopleft_hit{current_player.diverter_state=="worldtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
